changed the css/html to reflect my actual design

--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="styles.css">
-  <title>Heroku Test</title>
-</head>
-<body>
-  <div class="container-center-horizontal">
-    <div class="home screen">
-      <img class="header-containter" src="header-container.svg"/>
-      <h1 class="title valign-text-middle kameron-bold-cararra-24px">MTG Worth</h1>
-      <div class="collection-btn"></div>
-      <div class="collection valign-text-middle kameron-bold-cararra-18px">Collection</div>
-      <div class="decks-btn"></div>
-      <div class="decks valign-text-middle kameron-bold-cararra-18px">Decks</div>
-      <div class="register-btn"></div>
-      <div class="register valign-text-middle kameron-bold-cararra-18px">Register</div>
-      <div class="login-btn"></div>
-      <div class="login valign-text-middle kameron-bold-cararra-18px">Login</div>
-      </div>
+<html>
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Kameron&display=swap" rel="stylesheet" />
+    <link href="./styles.css" rel="stylesheet" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class=e1_2>
+      <div class="e3_3"></div>
+      <span  class="MTG-Worth-Logo">MTG Worth</span>
+      <div class="e3_5"></div>
+      <div class="e3_6"></div>
+      <div class="e3_7"></div>
+      <div class="e3_8"></div>
+      <span  class="e3_11">Register</span>
+      <span  class="e4_14">Decks</span>
+      <span  class="e4_15">Collection</span>
+      <span  class="e3_10">Login</span>
     </div>
-</body>
-</html>
+  </body>
+  </html>
