--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Kameron&display=swap" rel="stylesheet" />
     <link href="./styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css">
     <title>Document</title>
   </head>
   <body>
